--- a/my-service/Dockerfile
+++ b/my-service/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.12-slim
 
+WORKDIR /app
+
 # Install poetry
 RUN pip install poetry
-
-WORKDIR /app
 
 # Copy poetry files
 COPY pyproject.toml poetry.toml ./
@@ -12,10 +12,13 @@ COPY pyproject.toml poetry.toml ./
 RUN poetry config virtualenvs.create false
 
 # Install dependencies
-RUN poetry install --only main --no-interaction --no-root
+RUN poetry install --no-dev --no-interaction
 
 # Copy application code
 COPY my_service/ ./my_service/
 
+# Expose port
+EXPOSE 9000
+
 # Run the application
-CMD ["poetry", "run", "uvicorn", "my_service.main:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["poetry", "run", "python", "-m", "my_service.main"]
