--- a/infra-k8s/k8s-apps/argocd/application.yaml
+++ b/infra-k8s/k8s-apps/argocd/application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/moibrahh/platform-engineer-test.git
+    repoURL: https://github.com/yourusername/platform-engineer-test.git
     path: infra-k8s/k8s-apps/nginx
     targetRevision: HEAD
   destination:
@@ -16,6 +16,8 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+    - CreateNamespace=true
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -25,7 +27,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/moibrahh/platform-engineer-test.git
+    repoURL: https://github.com/yourusername/platform-engineer-test.git
     path: infra-k8s/k8s-apps/my-service
     targetRevision: HEAD
   destination:
