Revert "minor changes"
This reverts commit a35dbdf9c225eba2f9baafc09860927c46f519c1.

--- a/infra-k8s/k8s-apps/argocd/kustomization.yaml
+++ b/infra-k8s/k8s-apps/argocd/kustomization.yaml
@@ -9,3 +9,5 @@ resources:
   - application.yaml
   - my-service-application.yaml
 
+# Optional: You can add patches here if you want to customize the ArgoCD installation
+patches: [] 
