--- a/infra-k8s/k8s-apps/my-service/deployment.yaml
+++ b/infra-k8s/k8s-apps/my-service/deployment.yaml
@@ -13,16 +13,14 @@ spec:
       labels:
         app: my-service
     spec:
-      imagePullSecrets:
-      - name: registry-secret
       containers:
       - name: my-service
-        image: my-registry.local:5000/my-service-v1
+        image: localhost:51337/my-service-v1
+        imagePullPolicy: Always
         ports:
         - containerPort: 9000
         env:
         - name: ARGOCD_SERVER
           value: "argocd-server.argocd"
         - name: ARGOCD_PORT
-          value: "443"
-      imagePullPolicy: Always 
+          value: "443" 
