--- a/infra-k8s/k8s-apps/my-service/kustomization.yaml
+++ b/infra-k8s/k8s-apps/my-service/kustomization.yaml
@@ -8,4 +8,5 @@ resources:
 - deployment.yaml
 - service.yaml
 - ingress.yaml
-- registry-secret.yaml 
+- registry-secret.yaml
+- hosts-configmap.yaml 
